# stampbarcode

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  stampbarcode  stampbarcode.py
tests/: test_stampbarcode.py
