[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stampbarcode"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pypdf==6.10.2",
    "reportlab==4.4.10",
    "typer==0.24.2",
]

[project.scripts]
stampbarcode = "stampbarcode:app"
